# pyrolysate

./: .gitignore  README.md  bump_version.py  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml  update_tlds.yml
pyrolysate/: __init__.py  cli.py  common.py  converter.py  converter_async.py  email.py  email_parser.py  tld.txt  update_tlds.py  url.py  url_parser.py  utils.py
src/: main.py
src/pyrolysate/: converter.py
tests/: test_email.py  test_file_parse.py  test_url.py
