[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "pyrolysate"
version = "1.0.2"
description = "Parser made to convert lists of emails and urls into JSON formatted, CSV formatted, or plain text strings or files"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
dependencies = []
[[project.authors]]
name = "Andrew Hennis"
email = "andrew.mr.hennis@gmail.com"

[dependency-groups]
dev = [ "black>=26.3.1", "pytest>=9.0.2", "requests>=2.33.1",]

[project.scripts]
pyro = "pyrolysate.cli:main"

[project.urls]
Homepage = "https://github.com/dawnandrew100/pyrolysate"
Issues = "https://github.com/dawnandrew100/pyrolysate/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [ "pyrolysate/**/*.py", "pyrolysate/**/*.txt",]

[tool.pytest.ini_options]
testpaths = [ "tests",]

[tool.hatch.envs.default]
detached = false

[tool.hatch.build.targets.wheel]
packages = [ "pyrolysate",]

[tool.hatch.envs.default.scripts]
pyro = "python -m pyrolysate.cli {args}"
dev = [ "pip uninstall pyrolysate -y", "pip install -e .",]
test = [ "pip install -e .", "pytest",]
